Liaison entre serveur et viewer fonctionnelle, mais pas encore d'affichage des images

--- a/webserver/cgi-bin/dicom.ini
+++ b/webserver/cgi-bin/dicom.ini
@@ -34,7 +34,7 @@ SQlite                   = 1
 
 # gives access to all DICOM servers known in acrnema.map
 
-ACRNemaMap               = C:\dicomserver\acrnema.map
+ACRNemaMap               = acrnema.map
 Dictionary               = dgate.dic
 
 # default IP address and port of DICOM server (may be non-local, web pages empty if wrong)
